--- a/auto.html
+++ b/auto.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Porsche</li>
+        <li>Audi</li>
+        <li>Mercedes</li>
     </ul>
 </body>
 </html>
