--- a/auto.html
+++ b/auto.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Punto</li>
+        <li>Puntoo</li>
         <li>Audi</li>
         <li>Mercedes</li>
     </ul>
