--- a/auto.html
+++ b/auto.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <ul>
-        <li>Puntoo</li>
-        <li>Ford</li>
+        <li>Jo auto</li>
+        <li>Audi</li>
         <li>Mercedes</li>
     </ul>
 </body>
